add product in order
